--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,6 +17,11 @@ spring:
   config:
     import: optional:configserver:http://localhost:8888
 
+  cloud:
+    openfeign:
+      micrometer:
+        enabled: true   # Enables tracing & metrics for Feign
+
 eureka:
   client:
     serviceUrl:
@@ -25,3 +30,21 @@ eureka:
       hostname: localhost
       ip-address: 127.0.0.1
       prefer-ip-address: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+  tracing:
+    sampling:
+      probability: 1.0    # trace all requests (reduce in prod)
+
+  otlp:
+    tracing:
+      endpoint: http://localhost:4318/v1/traces  # Jaeger OTLP
+
+logging:
+  pattern:
+    correlation: "[%X{traceId:-},%X{spanId:-}] "
